<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".multiplethread.MultipleThreadActivity">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/asyncTaskTutorialBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android_async_task_tutorial"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/handlerThreadTutorialBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android_handler_thread_tutorial"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/intentServiceTutorialBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android_intent_service_tutorial"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>